--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ nav li a {
     color: #131313;
 }
 
-.banner-dis {
+.banner-dis, .teams-dis {
     color: #727272;
 }
 
@@ -70,29 +70,11 @@ nav li a {
     margin-top: 20px;
     width: 100%;
 }
-/* responsive media queries */
-@media screen and (max-width: 576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
-/* medium devices */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-    header{
-        padding: 50px;
-    }
-    nav{
-        flex-direction: column;
-        
-    }
-}
+
 /* main styles */
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 .teams-container{
     display: flex;
@@ -117,4 +99,34 @@ main{
 .text-features{
     color: #FF900E;
     font-weight: 700;
+}
+/* responsive media queries */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    .teams-container{
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-right: 20px;
+        padding-left: 20PX;
+
+}
+}
+/* medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 50px;
+    }
+    nav, .teams-container{
+        flex-direction: column;
+        
+    }
 }
